[gd_scene load_steps=7 format=3 uid="uid://cidm74gqhacl8"]

[ext_resource type="Script" path="res://scripts/screens.gd" id="1_8d70s"]
[ext_resource type="Texture2D" uid="uid://rg8px2bx2sf2" path="res://assets/textures/ui/gear.png" id="2_g3obt"]
[ext_resource type="PackedScene" uid="uid://btflo8yx5jov7" path="res://scenes/shop_screen.tscn" id="2_ji6ko"]
[ext_resource type="PackedScene" uid="uid://hu8xf20i2vsp" path="res://scenes/title_screen.tscn" id="3_pfkoh"]
[ext_resource type="PackedScene" uid="uid://dgxc7oas4ne7d" path="res://scenes/pause_screen.tscn" id="4_03n8k"]
[ext_resource type="PackedScene" uid="uid://cvgupkcu8v6yw" path="res://scenes/game_over.tscn" id="5_t3r3r"]

[node name="Screens" type="CanvasLayer"]
process_mode = 3
layer = 101
script = ExtResource("1_8d70s")

[node name="ShopScreen" parent="." instance=ExtResource("2_ji6ko")]

[node name="Debug" type="Control" parent="."]
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ConsoleLog" type="Control" parent="Debug" groups=["debug_console"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackBG" type="ColorRect" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0196078, 0.0196078, 0.458824)

[node name="BuildNumberLabel" type="Label" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.0
offset_top = 3.0
offset_right = 126.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Build 0.1.0"

[node name="ScrollContainer" type="ScrollContainer" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = 56.0
offset_right = -44.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/ConsoleLog/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogLabel" type="Label" parent="Debug/ConsoleLog/ScrollContainer/VBoxContainer"]
layout_mode = 2
autowrap_mode = 3

[node name="ToggleConsole" type="TextureButton" parent="Debug"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -61.0
offset_right = 61.0
grow_vertical = 0
texture_normal = ExtResource("2_g3obt")
ignore_texture_size = true
stretch_mode = 0

[node name="TitleScreen" parent="." instance=ExtResource("3_pfkoh")]
visible = false

[node name="PauseScreen" parent="." instance=ExtResource("4_03n8k")]
visible = false

[node name="GameOver" parent="." instance=ExtResource("5_t3r3r")]
visible = false

[connection signal="pressed" from="Debug/ToggleConsole" to="." method="_on_toggle_console_pressed"]
